# In The Name Of God
# ========================================
# [] File Name : CMakeLists.txt
#
# [] Creation Date : 08-05-2015
#
# [] Created By : Parham Alvani (parham.alvani@gmail.com)
# =======================================
cmake_minimum_required (VERSION 2.6)

add_subdirectory (Subsets-Sum)
add_subdirectory (N-Queen)
